Fix dimensions venue images in concerts.html being to large on tablets screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ main {
 
 #page-title {
     background-color: rgba(4, 28, 44, 0.7);
-    font-size: 2.3rem;
+    font-size: 1.6rem;
     text-align: center;
     position: absolute;
     top: 15px;
@@ -243,7 +243,6 @@ main {
 }
 
 .concert-image {
-    height: 100%;
     width: auto;
     text-align: center;
     margin-bottom: 10px;
@@ -620,12 +619,14 @@ footer {
         /*In order to display concert image and description next to each other*/
         display: flex;
         flex-direction: row;
+        width: 55vw;
     }
 
     .align-right {
         /*In order to display concert image and description next to each other*/
         display: flex;
         flex-direction: row;
+        width: 55vw;
     }
 
     .concert-image {
@@ -634,10 +635,9 @@ footer {
     }
 
     .concert-image img {
-        padding-top: 50px;
+        padding-top: 60px;
         padding-right: 10px;
-        height: 100%;
-        width: auto;
+        width: 100%;
     }
 
     .concert-text {
